--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="hero-view"></div>
 
 
-    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script type="text/javascript">
       // Initial array of movies
       var topics = ["Batman", "Ororo Munroe", "The Green Lantern", "Iron Man", "Wonder Woman", "Spiderman", "The Hulk", "Batwoman", "The Flash", "Luke Cage", "Supergirl", "The Question", "America Chavez", "Beyonce", "Jessica Jones", "Gamora", "Black Canary", "Catwoman", "Lex Luthor", "Harley Quinn"];
