--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>Heroes and Villains</title>
-    <style type="text/css">
-    button,
-    div,
-    form,
-    input {
-        margin: 10px;
-    }
-    </style>
+    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+    <!-- We link our html to the Bootstrap CDN -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/stylesheet.css">
 </head>
 
 <body>
@@ -19,148 +20,142 @@
         <h1>Who's Your Hero?</h1>
         <!-- Rendered buttons will get dumped Here  -->
         <div id="buttons-view"></div>
-
         <form id="gif-form">
             <label for="gifName-input">Who's Your Hero?</label>
             <input type="text" id="heroName-input">
             <br>
-
             <!-- Button triggers new hero to be added -->
             <input id="add-gif" type="submit" value="Who's Your Hero?">
         </form>
-
         <!-- Heroes will get dumped dere -->
         <div id="hero-view"></div>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script type="text/javascript">
+        // Initial array of movies
+        var topics = ["Batman", "Ororo Munroe", "The Green Lantern", "Iron Man", "Wonder Woman", "Spiderman", "The Hulk", "Batwoman", "The Flash", "Luke Cage", "Supergirl", "The Question", "America Chavez", "Beyonce", "Jessica Jones", "Gamora", "Black Canary", "Catwoman", "Lex Luthor", "Harley Quinn"];
 
 
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript">
-      // Initial array of movies
-      var topics = ["Batman", "Ororo Munroe", "The Green Lantern", "Iron Man", "Wonder Woman", "Spiderman", "The Hulk", "Batwoman", "The Flash", "Luke Cage", "Supergirl", "The Question", "America Chavez", "Beyonce", "Jessica Jones", "Gamora", "Black Canary", "Catwoman", "Lex Luthor", "Harley Quinn"];
-      
 
+        // Event listener for all button elements
+        $(document).on("click", ".hero", function() {
+            $("#hero-view").empty();
+            // In this case, the "this" keyword refers to the button that was clicked
+            var person = $(this).attr("data-name");
+            console.log(person);
 
- // Event listener for all button elements
-    $(document).on("click", ".hero", function() {
-    	$("#hero-view").empty();
-      // In this case, the "this" keyword refers to the button that was clicked
-      var person = $(this).attr("data-name");
-      console.log(person);
+            // Constructing a URL to search Giphy for the name of the person who said the quote
+            var queryURL = "https://api.giphy.com/v1/gifs/search?q=" +
+                person + "&api_key=dc6zaTOxFJmzC&limit=10";
 
-      // Constructing a URL to search Giphy for the name of the person who said the quote
-      var queryURL = "https://api.giphy.com/v1/gifs/search?q=" +
-        person + "&api_key=dc6zaTOxFJmzC&limit=10";
+            // Performing our AJAX GET request
+            $.ajax({
+                    url: queryURL,
+                    method: "GET"
+                })
+                // After the data comes back from the API
+                .done(function(response) {
+                    // Storing an array of results in the results variable
+                    var results = response.data;
+                    console.log(results);
 
-      // Performing our AJAX GET request
-      $.ajax({
-          url: queryURL,
-          method: "GET"
-        })
-        // After the data comes back from the API
-        .done(function(response) {
-          // Storing an array of results in the results variable
-          var results = response.data;
-          console.log(results);
+                    // Looping over every result item
+                    for (var i = 0; i < results.length; i++) {
 
-          // Looping over every result item
-          for (var i = 0; i < results.length; i++) {
+                        // Only taking action if the photo has an appropriate rating
+                        if (results[i].rating !== "r" && results[i].rating !== "pg-13") {
+                            // Creating a div with the class "item"
+                            var gifDiv = $("<div class='item'>");
 
-            // Only taking action if the photo has an appropriate rating
-            if (results[i].rating !== "r" && results[i].rating !== "pg-13") {
-              // Creating a div with the class "item"
-              var gifDiv = $("<div class='item'>");
+                            // Storing the result item's rating
+                            var rating = results[i].rating;
+                            console.log(rating);
 
-              // Storing the result item's rating
-              var rating = results[i].rating;
-              console.log(rating);
+                            // Creating a paragraph tag with the result item's rating
+                            var p = $("<p>").text("Rating: " + rating);
 
-              // Creating a paragraph tag with the result item's rating
-              var p = $("<p>").text("Rating: " + rating);
+                            // Creating an image tag
+                            var personImage = $("<img>");
 
-              // Creating an image tag
-              var personImage = $("<img>");
+                            // Giving the image tag an src attribute of a proprty pulled off the
+                            // result item
+                            var animatedImageURL = results[i].images.original.url;
+                            var stillImageURL = results[i].images.original_still.url;
+                            console.log(stillImageURL);
+                            personImage.attr({
+                                "src": stillImageURL,
+                                "data-still": stillImageURL,
+                                "data-animate": animatedImageURL,
+                                "class": "imageButton"
+                            });
+                            personImage.attr("src", stillImageURL);
 
-              // Giving the image tag an src attribute of a proprty pulled off the
-              // result item
-              var animatedImageURL = results[i].images.original.url;
-              var stillImageURL = results[i].images.original_still.url;
-              console.log(stillImageURL);
-              personImage.attr({"src": stillImageURL,
-          						"data-still": stillImageURL,
-          					    "data-animate": animatedImageURL,
-          						"class": "imageButton"});
-              personImage.attr("src", stillImageURL);
+                            // Appending the paragraph and personImage we created to the "gifDiv" div we created
+                            gifDiv.append(p);
+                            gifDiv.append(personImage);
 
-              // Appending the paragraph and personImage we created to the "gifDiv" div we created
-              gifDiv.append(p);
-              gifDiv.append(personImage);
-
-              // Prepending the gifDiv to the "#gifs-appear-here" div in the HTML
-              $("#hero-view").prepend(gifDiv);
-            }
-          }
+                            // Prepending the gifDiv to the "#gifs-appear-here" div in the HTML
+                            $("#hero-view").prepend(gifDiv);
+                        }
+                    }
+                });
         });
-    });
 
 
 
-    $(document).on("click", ".imageButton", function(){
-    	console.log(this);
-    	if (this.src === $(this).attr("data-still")) {
-    		console.log("This the still image url, switching to animated url");
-    		this.src = $(this).attr("data-animate");
-    	}
+        $(document).on("click", ".imageButton", function() {
+            console.log(this);
+            if (this.src === $(this).attr("data-still")) {
+                console.log("This the still image url, switching to animated url");
+                this.src = $(this).attr("data-animate");
+            } else if (this.src === $(this).attr("data-animate")) {
+                console.log("Making people happy with my console log");
+                this.src = $(this).attr("data-still");
+            }
 
-    	else if (this.src === $(this).attr("data-animate")) {
-    		console.log("Making people happy with my console log");
-    		this.src = $(this).attr("data-still");
-    	}
-
-    })
+        })
 
 
-      // Function for displaying hero gifs
-      function renderButtons() {
+        // Function for displaying hero gifs
+        function renderButtons() {
 
-        // Deleting the gifs prior to adding new set
-        // (this is necessary otherwise you will have repeat buttons)
-        $("#buttons-view").empty();
+            // Deleting the gifs prior to adding new set
+            // (this is necessary otherwise you will have repeat buttons)
+            $("#buttons-view").empty();
 
-        // Looping through the array of characters
-        for (var i = 0; i < topics.length; i++) {
+            // Looping through the array of characters
+            for (var i = 0; i < topics.length; i++) {
 
-          // Then dynamicaly generating buttons for each movie in the array
-          // This code $("<button>") is all jQuery needs to create the beginning and end tag. (<button></button>)
-          var a = $("<button>");
-          // Adding a class of movie to our button
-          a.addClass("hero");
-          // Adding a data-attribute
-          a.attr("data-name", topics[i]);
-          // Providing the initial button text
-          a.text(topics[i]);
-          // Adding the button to the buttons-view div
-          $("#buttons-view").append(a);
+                // Then dynamicaly generating buttons for each movie in the array
+                // This code $("<button>") is all jQuery needs to create the beginning and end tag. (<button></button>)
+                var a = $("<button>");
+                // Adding a class of movie to our button
+                a.addClass("hero");
+                // Adding a data-attribute
+                a.attr("data-name", topics[i]);
+                // Providing the initial button text
+                a.text(topics[i]);
+                // Adding the button to the buttons-view div
+                $("#buttons-view").append(a);
+            }
         }
-      }
 
-      // This function handles events where a hero button is clicked
-      $("#add-gif").on("click", function(event) {
-        event.preventDefault();
-        // This line grabs the input from the textbox
-        var character = $("#heroName-input").val().trim();
+        // This function handles events where a hero button is clicked
+        $("#add-gif").on("click", function(event) {
+            event.preventDefault();
+            // This line grabs the input from the textbox
+            var character = $("#heroName-input").val().trim();
 
-        // Adding movie from the textbox to our array
-        topics.push(character);
+            // Adding movie from the textbox to our array
+            topics.push(character);
 
-        // Calling renderButtons which handles the processing of our movie array
+            // Calling renderButtons which handles the processing of our movie array
+            renderButtons();
+        });
+
+        // Calling the renderButtons function to display the intial buttons
         renderButtons();
-      });
-
-            // Calling the renderButtons function to display the intial buttons
-      renderButtons();
-      
-    </script>
-  </div>
+        </script>
+    </div>
 </body>
 
 </html>
